# hive

./: .gitignore  Outline.md  README.md  RULES.md
app/: ai_player.py  game_logic.py  hex_math.py  main.py  models.py
cpp/: CMakeLists.txt  DEBUG_INSTRUCTIONS.md  README.md
cpp/include/: benchmark.hpp  evaluator.hpp  game_interface.hpp  game_logic.hpp  hex_math.hpp  minimax.hpp  models.hpp  self_play.hpp  tunable_evaluator.hpp  weight_optimizer.hpp  zobrist.hpp
cpp/src/: evaluator.cpp  game_interface.cpp  game_logic.cpp  hex_math.cpp  main.cpp  minimax.cpp  models.cpp  repro_crash.cpp  self_play.cpp  tunable_evaluator.cpp  weight_optimizer.cpp
frontend/: README.md  error.txt  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
minimax_ai/: evaluator.py  search.py
neural_guided_mcts/: __init__.py  action_space.py  game_interface.py  state_encoder.py  train.py
neural_guided_mcts/mcts/: __init__.py  node.py  search.py
neural_guided_mcts/network/: model.py  training.py
neural_guided_mcts/self_play/: __init__.py  game_generator.py
sample_games/: Hive_game1.csv  Hive_game2.csv  Hive_game3.csv
tests/: test_mechanics.py  test_spider.py
